fix(css): correct Google Scholar icon alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -678,7 +678,7 @@ input, select, textarea {
 					-ms-transition: all 0.2s ease-in-out;
 					transition: all 0.2s ease-in-out;
 					border-radius: 100%;
-					border: solid 1px #fff;
+					border: solid 1px;
 					display: block;
 					font-size: 1.75em;
 					height: 2.5em;
@@ -710,6 +710,10 @@ input, select, textarea {
 
 				#header nav a span {
 					display: none;
+				}
+
+				#header nav li a .ai {
+					vertical-align: -webkit-baseline-middle;
 				}
 
 				.resume-download {
